@@ -1,3 +1,8 @@
+2002-05-07  Richard Frith-Macdonald <rfm@gnu.org>
+
+	* Source/NSUser.m: mingw path fixes and debugging
+	* Source/NSFileManager.m: ditto
+
 2002-05-06  Adam Fedor  <fedor@gnu.org>
 
 	* Source/NSMethodSignature.m (-isEqual:): Implemented (from
